# ohtupalautus

./: .gitignore  README.md
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  pyproject.toml  report.html
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/templates/: login.html  register.html
viikko3/login/src/tests/: home.robot  login.robot
viikko4/maksukortti-mock/src/: kassapaate.py  kassapaate_test.py
viikko4/verkkokauppa/src/: kauppa_test.py
