[project]
name = "poetry-web"
version = "0.0.0"
description = ""
authors = [
    {name = "test",email = "e110a@git.pilvi"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (==1.4.54)",
    "fastapi (>=0.121.1,<0.122.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
